added new method declarations to DriveAPI, implemented addDrive, finished test for uploadNewFile in FileAPI and fixed many bugs