@@ -1,5 +1,6 @@
 package com.cloudpi.cloudpi.file_module.physical.services;
 
+import com.cloudpi.cloudpi.exception.resource.ResourceNotExistException;
 import com.cloudpi.cloudpi.file_module.physical.domain.Drive;
 import com.cloudpi.cloudpi.file_module.physical.domain.DriveRepo;
 import com.cloudpi.cloudpi.file_module.physical.dto.DriveDTO;
@@ -10,6 +11,7 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Comparator;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 //todo change exceptions
 @AppService
@@ -29,7 +31,7 @@ public class DriveServiceImpl implements DriveService {
 
         var drivesWithEnoughSpace = drives.stream()
                 .filter(drive -> drive.getFreeSpace() >= fileSize)
-                .toList();
+                .collect(Collectors.toList());
 
         if (drivesWithEnoughSpace.isEmpty()) {
             throw new IllegalStateException("No drive big enough for file of size: " + fileSize);
@@ -52,19 +54,22 @@ public class DriveServiceImpl implements DriveService {
                 createDrive.getPath(),
                 createDrive.getAssignedSpace()
         );
+        driveRepo.save(drive);
 
         return drive.mapToDTO();
     }
 
     @Override
     public Path getPath(UUID drivePubId) {
-        var drive = driveRepo.findByPubId(drivePubId);
+        var drive = driveRepo.findByPubId(drivePubId)
+                .orElseThrow(ResourceNotExistException::new);
         return Paths.get(drive.getPath());
     }
 
     @Override
     public Path getPathToFile(UUID filePubId) {
-        var drive = driveRepo.findByAssignedFile(filePubId);
+        var drive = driveRepo.findByAssignedFile(filePubId)
+                .orElseThrow(ResourceNotExistException::new);
 
         return Paths.get(drive.getPath() + "/" + filePubId);
     }
